test/samples/valid/interp/root_abort.maruir
fun main(): u8
locals a: u8[] *#memory;
{
	entry:
		a := alloc u8[u8(1)] in #memory;
		store u8(42) in a[u256(0)];
		abort;
}
